# scan-ble-sensors

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  M95_uart.c  M95_uart.h  crc.c  credenciales.h  esp32_general.c  esp32_general.h  inkbird_ble.c  inkbird_ble.h  main.c  ota_esp32.c  ota_esp32.h  ota_global.c  ota_global.h  ota_headers.c  ota_m95.c  ota_m95.h
main/inc/: crc.h  esp32_general.h  inkbird_ble.h  ota_headers.h
main/ota/: ota_control.c  ota_control.h
